--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "openai": "^5.8.2",
     "papaparse": "^5.5.3",
     "prisma": "^6.10.1",
     "react": "^19.0.0",
