Fix Prisma binary targets for Netlify deployment
- Update Prisma schema with correct binary targets for Netlify Ubuntu environment
- Include 'native' for local development plus debian/rhel targets for production
- Add .npmrc file for Prisma registry configuration
- Update build scripts to use npx and handle failures gracefully
- Update netlify.toml with proper binary target environment variables

This resolves the 'Unknown binaryTarget native' error during Netlify builds

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = ".next"
 
 [build.environment]
-  PRISMA_CLI_BINARY_TARGETS = "rhel-openssl-1.0.x,rhel-openssl-3.0.x,native"
+  PRISMA_CLI_BINARY_TARGETS = "debian-openssl-1.1.x,debian-openssl-3.0.x,rhel-openssl-1.0.x,rhel-openssl-3.0.x"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
