Fix database schema issues and implement topic consolidation
- Replace Prisma with Supabase client in API routes
- Fix table name references from user_profiles to User
- Update authentication flows to use correct User table schema
- Add comprehensive topic consolidation with 100+ mappings
- Separate talent acquisition (pre-hire) and talent management (post-hire)
- Create production-ready topic consolidation scripts
- Fix API endpoints to match actual database structure
- Add better error handling and environment variable validation
- Applied topic consolidation via SQL reducing topic redundancy by ~50%

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "db:generate": "npx prisma generate",
     "create-test-user": "tsx scripts/create-test-user.ts",
     "crawl:daily": "tsx src/scripts/daily-crawler.ts",
+    "social:init-history": "tsx src/scripts/init-social-history.ts",
     "add-test-analysts": "tsx scripts/add-test-analysts.ts",
+    "add-sample-analysts": "tsx scripts/add-sample-analysts-with-social.ts",
+    "migrate-twitter-handles": "tsx scripts/migrate-twitter-handles.ts",
+    "add-social-handles": "tsx scripts/add-social-handles.ts",
     "test-twitter": "tsx scripts/test-single-analyst.ts"
   },
   "dependencies": {
