--- a/.gitignore
+++ b/.gitignore
@@ -30,13 +30,8 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
-.env
-.env.*
-.env.local
-.env.development
-.env.test
-.env.production
+# env files (can opt-in for committing if needed)
+.env*
 
 # vercel
 .vercel
