Big commit, fixing the broken database, adding the banners.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 # Application Configuration
 APP_URL=http://localhost:3000
 
-# Database
-DATABASE_URL="postgresql://your_database_connection_string"
+# Database - Choose the connection that works best for your setup
+# Test all three with: npm run test:db
+
+# Option 1: Direct Connection (simple, good for development)
+DATABASE_URL="postgresql://postgres:[password]@db.[project-ref].supabase.co:5432/postgres"
+
+# Option 2: Transaction Pooler (optimized for short-lived transactions)
+DATABASE_URL_2="postgresql://postgres.[project-ref]:[password]@aws-0-[region].pooler.supabase.com:6543/postgres?pgbouncer=true&pool_mode=transaction"
+
+# Option 3: Session Pooler (optimized for longer sessions)
+DATABASE_URL_3="postgresql://postgres.[project-ref]:[password]@aws-0-[region].pooler.supabase.com:6543/postgres?pgbouncer=true&pool_mode=session"
 
 # Supabase Configuration
 NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
