--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "npx prisma generate || echo 'Prisma generation failed, continuing...'",
     "start": "next start",
     "lint": "next lint",
-    "test": "tsx --test tests/api-routes.test.ts",
+    "test": "tsx --test tests/*.test.ts",
     "social:hourly": "npx tsx src/scripts/hourly-social-monitor.ts",
     "discover:daily": "npx tsx src/scripts/daily-publication-discovery.ts",
     "social:daily": "npx tsx src/scripts/daily-crawler.ts",
@@ -23,7 +23,10 @@
     "add-sample-analysts": "tsx scripts/add-sample-analysts-with-social.ts",
     "migrate-twitter-handles": "tsx scripts/migrate-twitter-handles.ts",
     "add-social-handles": "tsx scripts/add-social-handles.ts",
-    "test-twitter": "tsx scripts/test-single-analyst.ts"
+    "test-twitter": "tsx scripts/test-single-analyst.ts",
+    "test:db": "tsx scripts/test-db-connection.ts",
+    "check:supabase": "tsx scripts/check-supabase-status.ts",
+    "test:google-oauth": "node scripts/test-google-oauth-config.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -44,10 +47,12 @@
     "@supabase/supabase-js": "^2.50.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/crypto-js": "^4.2.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.0.1",
     "framer-motion": "^12.19.2",
     "googleapis": "^150.0.1",
     "lucide-react": "^0.523.0",
@@ -67,6 +72,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19",
