--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "test-twitter": "tsx scripts/test-single-analyst.ts",
     "test:db": "tsx scripts/test-db-connection.ts",
     "check:supabase": "tsx scripts/check-supabase-status.ts",
-    "test:google-oauth": "node scripts/test-google-oauth-config.js"
+    "test:google-oauth": "node scripts/test-google-oauth-config.js",
+    "test:profile-pictures": "tsx scripts/test-profile-picture-search.ts"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
+    "@mantine/core": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
+    "@monaco-editor/react": "^4.7.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.10.1",
     "@radix-ui/react-checkbox": "^1.3.2",
