--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@mantine/core": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
