--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "google-auth-library": "^10.2.1",
     "googleapis": "^150.0.1",
     "lucide-react": "^0.523.0",
+    "mammoth": "^1.6.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "openai": "^5.11.0",
